--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LED Control - Beta 3.0.0</title>
+    <title>CAR HORN</title>
     <style>
         body {
             background-color: black;
@@ -69,16 +69,19 @@
         <p>INFO:</p>
         <ul>
             <li>1. button goes away so you can not span :)</li>
-            <li>2. After 50 clicks a car horn goes off in my room</li>
+            <li>2. After 100 clicks a car horn goes off in my room</li>
             <li>3. If something does not message work, it really helps me improve my code</li>
             <li>4. My GitHub is linked below</li>
             <a href="https://github.com/Ahart0841" style="color: #007bff; text-decoration: none;">Ahart0841</a>
+			<a href="https://github.com/Fakemayham084" style="color: #007bff; text-decoration: none;">Fakemayham084</a>
         </ul>
     </div>
 
     <div id="designerInfo">
-        Developed by <a href="https://github.com/Ahart0841" style="color: #007bff; text-decoration: none;">Ahart0841</a>
-        (<span style="color: green;">version 1.1.1</span>)
+        Developed by <a href="https://github.com/Ahart0841" style="color: #007bff; text-decoration: none;">Ahart0841</a> 
+        & 
+        <a href="https://github.com/Fakemayham084" style="color: #007bff; text-decoration: none;">Fakemayham084</a> 
+        (<span style="color: green;">version 1.2.0</span>)
     </div>
 
     <form id="triggerForm">
@@ -117,7 +120,7 @@
             }, 1000);  // 1000ms or 1 second interval for countdown
 
             // Make the request after hiding the button
-            fetch('https://f6ff-2601-84-8b01-7b20-e5cb-1ec9-334f-a4a0.ngrok-free.app/trigger', {
+            fetch('https://0708-2601-84-8b01-7b20-342f-64ba-272a-5499.ngrok-free.app/trigger', {
                 method: 'POST'
             })
             .then(response => response.json())
