--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <form id="triggerForm">
-        <button type="submit">Blink LED</button>
+        <button type="submit">CLICK ME</button>
     </form>
 
     <div id="buttonMessage">The button will be back in <span id="countdownTimer">1</span> second</div>
