--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             }, 1000);  // 1000ms or 1 second interval for countdown
 
             // Make the request after hiding the button
-            fetch('https://21c7-2601-84-8b01-7b20-342f-64ba-272a-5499.ngrok-free.app/trigger', {
+            fetch('monkey-factual-rooster.ngrok-free.app/trigger', {
                 method: 'POST'
             })
             .then(response => response.json())
