--- a/index.html
+++ b/index.html
@@ -68,12 +68,14 @@
     <div id="rules">
         <p>INFO:</p>
         <ul>
-            <li>1. button goes away so you can not span :)</li>
-            <li>2. After 100 clicks a car horn goes off in my room</li>
-            <li>3. If something does not message work, it really helps me improve my code</li>
-            <li>4. My GitHub is linked below</li>
-            <a href="https://github.com/Ahart0841" style="color: #007bff; text-decoration: none;">Ahart0841</a>
-			<a href="https://github.com/Fakemayham084" style="color: #007bff; text-decoration: none;">Fakemayham084</a>
+            <li>1. The button disappears so you cannot spam :)</li>
+            <li>2. After 100 clicks, a car horn goes off in my room.</li>
+            <li>3. If something doesn't work, it helps me improve my code.</li>
+            <li>4. My GitHub is linked below.</li>
+            <li>
+                <a href="https://github.com/Ahart0841" style="color: #007bff; text-decoration: none;">Ahart0841</a> and 
+                <a href="https://github.com/Fakemayham084" style="color: #007bff; text-decoration: none;">Fakemayham084</a>
+            </li>
         </ul>
     </div>
 
@@ -120,7 +122,7 @@
             }, 1000);  // 1000ms or 1 second interval for countdown
 
             // Make the request after hiding the button
-            fetch('monkey-factual-rooster.ngrok-free.app/trigger', {
+            fetch('https://monkey-factual-rooster.ngrok-free.app/trigger', {
                 method: 'POST'
             })
             .then(response => response.json())
