--- a/index.html
+++ b/index.html
@@ -63,6 +63,31 @@
             display: none;
             margin-top: 10px;
         }
+
+        /* Dark Gray Overlay for offline mode */
+        #offlineOverlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(32, 32, 32, 0.95); /* Darker gray background */
+            color: white;
+            display: none;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            z-index: 9999;
+        }
+
+        #offlineOverlay h1 {
+            font-size: 50px;
+            margin: 0;
+        }
+
+        #offlineOverlay p {
+            font-size: 20px;
+        }
     </style>
 </head>
 <body>
@@ -93,8 +118,14 @@
 
     <div id="buttonMessage">The button will be back in <span id="countdownTimer">1</span> second</div>
 
-    <!-- Toggle Button to switch backgrounds -->
-    <button id="toggleBackground">Toggle Offline Background</button>
+    <!-- Button to toggle offline mode -->
+    <button id="toggleBackground">Toggle Offline Mode</button>
+
+    <!-- Offline Overlay -->
+    <div id="offlineOverlay">
+        <h1>OFFLINE</h1>
+        <p>Please check your connection or try again later.</p>
+    </div>
 
     <script>
         const form = document.getElementById('triggerForm');
@@ -102,6 +133,7 @@
         const buttonMessage = document.getElementById('buttonMessage');
         const countdownTimer = document.getElementById('countdownTimer');
         const toggleBackgroundButton = document.getElementById('toggleBackground');
+        const offlineOverlay = document.getElementById('offlineOverlay');
         let offlineMode = false;
 
         form.addEventListener('submit', function(event) {
@@ -140,19 +172,32 @@
             });
         });
 
-        // Function to toggle between online and offline backgrounds
+        // Function to toggle offline state
         toggleBackgroundButton.addEventListener('click', function() {
-            offlineMode = !offlineMode;  // Toggle the state
+            fetch('https://monkey-factual-rooster.ngrok-free.app/toggle_offline', {
+                method: 'POST'
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.offline) {
+                    offlineOverlay.style.display = 'flex';
+                } else {
+                    offlineOverlay.style.display = 'none';
+                }
+            });
+        });
 
-            if (offlineMode) {
-                document.body.style.backgroundColor = 'gray';  // Offline background
-                document.body.style.color = 'black';  // Offline text color
-                toggleBackgroundButton.textContent = 'Switch to Online Mode';  // Change button text
-            } else {
-                document.body.style.backgroundColor = 'black';  // Online background
-                document.body.style.color = 'white';  // Online text color
-                toggleBackgroundButton.textContent = 'Toggle Offline Background';  // Reset button text
-            }
+        // Check offline state on page load
+        document.addEventListener('DOMContentLoaded', function() {
+            fetch('https://monkey-factual-rooster.ngrok-free.app/get_state')
+            .then(response => response.json())
+            .then(data => {
+                if (data.offline) {
+                    offlineOverlay.style.display = 'flex';
+                } else {
+                    offlineOverlay.style.display = 'none';
+                }
+            });
         });
     </script>
 </body>
